--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -33,42 +33,50 @@
 
 <main>
 
-  <div class="prHeader">
+  <section>
+    <header class="prHeader">
       <h1 class="prTitle">Art of Visual Data</h1>
       <div class="scrollIndicator">
         <div class="scrollIndicator-inner"></div>
       </div>    
-  </div>
+    </header>
 
-  <div class="imageContainer">
-  <img src="caseStudy1/aovdWebsiteMockup.png" alt="Desktop Mockup showing Article Home Screen." class="mockupImage"></img>
-  </div>
+    <div class="imageContainer">
+      <img src="caseStudy1/aovdWebsiteMockup.png" alt="Desktop Mockup showing Article Home Screen." class="mockupImage"></img>
+    </div>
+  <section>
 
   <section class="prInfo">
 
-    <span style="white-space: nowrap;">
+    <header style="white-space: nowrap;" class="blockA">
       <h2 class="prSubtitle">Designing Emotions.<br>Stories Within Data.</h2> 
-    </span>
+    </header>
 
-    <div class ="categories">
+    <span class="blockB"></span>
+
+    <div class ="categories blockC">
       <div class="sectionDivider"></div>
       <article class="prText">
-        <h3 class="prSubHeading">Timeframe</h3>
-        <p class="date">January – February 2025<br>April 2025</br></p>
+        <h3 class="prSubHeading blockA2">Timeframe</h3>
+        <span class="blockB2"></span>
+        <p class="date blockC2">January – February 2025<br>April 2025</br></p>
       </article>
       <div class="sectionDivider"></div>
       <article class="prText">
         <h3 class="prSubHeading">Context</h3>
+        <span class="blockB2"></span>
         <p>Although global datasets like the UN's Sustainable Development Goals are publicly available, they often remain cognitively inaccessible to general audiences. In a 2025 survey, <a href="https://www.qlik.com/us/data-literacy#:~:text=%E2%80%9CIn%20a%20recent%20Censuswide%20survey%20on%20behalf%20of%20Qlik%2C%20of%20more%20than%207%2C300%20business%20decision%20makers%2C%20just%2024%25%20consider%20themselves%20data%20literate.%E2%80%9D" class="reference1" target="_blank" rel="noopener">only 24% of business decision makers</a> considered themselves data literate. This gap makes complex metrics feel distant and inaccessible—not only in understanding global issues but also in <a href="https://online.hbs.edu/blog/post/data-literacy#:~:text=Data%20literacy%20can%20help%20non%2Ddata%20professionals%20read%20and%20understand%20data%20and%20use%20it%20to%20inform%20their%20decision%2Dmaking.%20As%20such%2C%20data%20literacy%20is%20increasingly%20important%20not%20just%20for%20executive%20leadership%2C%20but%20for%20managers%20and%20employees%20who%20want%20to%20increase%20the%20value%20they%20bring%20to%20their%20organization." class="reference1" target="_blank" rel="noopener">applying data within everyday decision-making</a>—leading to missed opportunities for awareness, education, and meaningful action.</p>
       </article>
       <div class="sectionDivider"></div>
       <article class="prText">
         <h3 class="prSubHeading">Solution</h3>
+        <span class="blockB2"></span>
         <p>Art of Visual Data (AoVD) tackles the challenge of making <a href="https://unstats.un.org/sdgs/files/report/2024/E_2024_54_Statistical_Annex_I_and_II.pdf" class="reference1" target="_blank" rel="noopener">complex global data</a> accessible and understandable. This project removes the cognitive barrier of complex data through an engaging visual storytelling, accessible UI/UX, and gamified learning. By translating abstract statistics into human-centered visuals, AoVD empowers users to not only understand data but care about it—building data literacy while connecting to real-world problems.</p>
       </article>
       <div class="sectionDivider"></div>
       <article class="prText">
         <h3 class="prSubHeading">Team</h3>
+        <span class="blockB2"></span>
         <p>Individual</p>
       </article>
     </div>
@@ -76,10 +84,13 @@
 
   <section class="introduction">
     <div class="introHeading">
-      <span style="white-space: nowrap;">
+      <header style="white-space: nowrap;" class="blockA">
         <h2 class="prSubtitle3">Numbers to Stories</h2>
-      </span>
-      <p class="paragraphStyle1">While exploring global datasets, I realized that statistics alone rarely drive change—people connect with stories, not spreadsheets. To make the data resonate, I designed a platform that transforms impactful SDG indicators into narrative-driven experiences.</p>
+      </header>
+
+      <span class="blockB"></span>
+
+      <p class="paragraphStyle1 blockC">While exploring global datasets, I realized that statistics alone rarely drive change—people connect with stories, not spreadsheets. To make the data resonate, I designed a platform that transforms impactful SDG indicators into narrative-driven experiences.</p>
     </div>
 
     <figure class="projectThumbnail2">
@@ -176,6 +187,8 @@
         </div>
       </div>
       
+      <span class="personaBlock"></span>
+
       <div class="personaDetails">
         <article class="painPoints">
           <h3>Pain Points</h3>
@@ -218,8 +231,9 @@
           <div class="eris"></div>
           <img class="arrowRight" src="caseStudy1/chevron.svg" alt="Right Arrow">
         </div>
-
       </div>
+
+      <span class="personaBlock"></span>
       
       <div class="personaDetails">
         <article class="painPoints">
