--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -107,7 +107,7 @@
       <h2>Building empathetic narratives</h2>
     </header>
     <div class="sectionDivider"></div>
-    <p class="paragraphStyle2" id="pg1">Looking through the <a href="https://unstats.un.org/sdgs/files/report/2024/E_2024_54_Statistical_Annex_I_and_II.pdf" class="reference1" target="_blank" rel="noopener">17 Sustainable Development Goals dataset</a>, I set out to connect five different indicators to build an honest narrative that seeks emotional connection. Emotionally engaging stories <a href="https://simpleshow.com/business-storytelling/#:~:text=The%20London%20School%20of%20Business%20found%20that%20people%20retain%2065%20to%2070%20percent%20of%20information%20shared%20via%20a%20story%20versus%20only%205%20to%2010%20percent%20of%20information%20conveyed%20through%20statistics." class="reference1" target="_blank" rel="noopener">can improve information retention by up to 70%</a>. When we incorporate narratives and emotion within statistics, they become much more than numbers.</p>
+    <p class="paragraphStyle2" id="pg1">Looking through the <a href="https://unstats.un.org/sdgs/files/report/2024/E_2024_54_Statistical_Annex_I_and_II.pdf" class="reference1" target="_blank" rel="noopener">17 Sustainable Development Goals dataset</a>, I set out to connect five different indicators to build an honest narrative that seeks emotional connection. <span class="line-break"></span>Emotionally engaging stories <a href="https://simpleshow.com/business-storytelling/#:~:text=The%20London%20School%20of%20Business%20found%20that%20people%20retain%2065%20to%2070%20percent%20of%20information%20shared%20via%20a%20story%20versus%20only%205%20to%2010%20percent%20of%20information%20conveyed%20through%20statistics." class="reference1" target="_blank" rel="noopener">can improve information retention by up to 70%</a>. When we incorporate narratives and emotion within statistics, they become much more than numbers.</p>
     <figure class="affinityMap">
       <img src="caseStudy1/projectIdeationBoard _ DESN2021.png" alt="Desktop Mockup showing Article Home Screen." class="mockupImage"></img>
       <figcaption class="paragraphStyle1">Organizing SDGs through Affinity Mapping</figcaption>
@@ -132,31 +132,35 @@
         <p id="author">Edward Tufte</p>
       </div>
     </article>
+
+    <div class="pointContainer">
+      <section class="introSummary">
+        <article class="keyPoint">
+          <header class="gatheringDataHeaders">
+            <h3>what's the story?</h3>
+            <div class="keyTitle">
+              <h2>The Narrative</h2>
+              <img src="caseStudy1/note.svg" alt="Note icon."></img>
+            </div>
+          </header>
+          <p class="paragraphStyle3">Children without legal identity (16.9.1) are often found in environments of low socioeconomic support (1.3), where they are disproportionately engaged in child labour (8.7.1) (regionally), which follows with a low quality of health (HIV, 3.3.1.c).</p>
+        </article>
+
+        <article class="keyPoint">
+          <header class="gatheringDataHeaders">
+            <h3>how do we communicate?</h3>
+            <div class="keyTitle">
+              <h2>Early Challenges</h2>
+              <img src="caseStudy1/sword.svg" alt="Sword icon."></img>
+            </div>
+          </header>
+          <p class="paragraphStyle3">The challenge would be to design a platform that presents a clear, unbiased statistical story by including all points of data (even with varying timelines), while creating an efficient way of consuming data that is both physically and cognitively accessible.</p>
+        </article>
+      </section>
+    </div>    
   </section>
 
-  <section class="introSummary">
-    <article class="keyPoint">
-      <header class="gatheringDataHeaders">
-        <h3>what's the story?</h3>
-        <div class="keyTitle">
-          <h2>The Narrative</h2>
-          <img src="caseStudy1/note.svg" alt="Note icon."></img>
-        </div>
-      </header>
-      <p class="paragraphStyle3">Children without legal identity (16.9.1) are often found in environments of low socioeconomic support (1.3), where they are disproportionately engaged in child labour (8.7.1) (regionally), which follows with a low quality of health (HIV, 3.3.1.c).</p>
-    </article>
 
-    <article class="keyPoint">
-      <header class="gatheringDataHeaders">
-        <h3>how do we communicate?</h3>
-        <div class="keyTitle">
-          <h2>Early Challenges</h2>
-          <img src="caseStudy1/sword.svg" alt="Sword icon."></img>
-        </div>
-      </header>
-      <p class="paragraphStyle3">The challenge would be to design a platform that presents a clear, unbiased statistical story by including all points of data (even with varying timelines), while creating an efficient way of consuming data that is both physically and cognitively accessible.</p>
-    </article>
-  </section>
 
   <section class="process1">
     <header class="gatheringDataHeaders">
@@ -590,7 +594,7 @@
         <li>Print Design</li>
         <li>System Building</li>
       </ul>
-        <h3><a href="#" class="seeProject">see project</a></h3>
+      <h3><a href="#" class="seeProject">see project</a></h3>
     </div>
   </section>
 
