--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -107,7 +107,7 @@
       <h2>Building empathetic narratives</h2>
     </header>
     <div class="sectionDivider"></div>
-    <p class="paragraphStyle2" id="pg1">Looking through the <a href="https://unstats.un.org/sdgs/files/report/2024/E_2024_54_Statistical_Annex_I_and_II.pdf" class="reference1" target="_blank" rel="noopener">17 Sustainable Development Goals dataset</a>, I set out to connect five different indicators to build an honest narrative that seeks emotional connection. <span class="line-break"></span>Emotionally engaging stories <a href="https://simpleshow.com/business-storytelling/#:~:text=The%20London%20School%20of%20Business%20found%20that%20people%20retain%2065%20to%2070%20percent%20of%20information%20shared%20via%20a%20story%20versus%20only%205%20to%2010%20percent%20of%20information%20conveyed%20through%20statistics." class="reference1" target="_blank" rel="noopener">can improve information retention by up to 70%</a>. When we incorporate narratives and emotion within statistics, they become much more than numbers.</p>
+    <p class="paragraphStyle2" id="pg1">Looking through the <a href="https://unstats.un.org/sdgs/files/report/2024/E_2024_54_Statistical_Annex_I_and_II.pdf" class="reference1" target="_blank" rel="noopener">17 Sustainable Development Goals dataset</a>, I set out to connect five different indicators to build an honest narrative that seeks emotional connection. Emotionally engaging stories <a href="https://simpleshow.com/business-storytelling/#:~:text=The%20London%20School%20of%20Business%20found%20that%20people%20retain%2065%20to%2070%20percent%20of%20information%20shared%20via%20a%20story%20versus%20only%205%20to%2010%20percent%20of%20information%20conveyed%20through%20statistics." class="reference1" target="_blank" rel="noopener">can improve information retention by up to 70%</a>. When we incorporate narratives and emotion within statistics, they become much more than numbers.</p>
     <figure class="affinityMap">
       <img src="caseStudy1/projectIdeationBoard _ DESN2021.png" alt="Desktop Mockup showing Article Home Screen." class="mockupImage"></img>
       <figcaption class="paragraphStyle1">Organizing SDGs through Affinity Mapping</figcaption>
@@ -165,7 +165,7 @@
   <section class="process1">
     <header class="gatheringDataHeaders">
       <h3>defining our users</h3>
-      <h2>Who are we designing for?</h2>
+      <h2>Who are we <span class="line-break"></span>designing for?</h2>
     </header>
     <div class="sectionDivider"></div>
     
@@ -428,7 +428,7 @@
   <section class="finalDesigns">
     <header class="gatheringDataHeaders">
       <h3>final designs</h3>
-      <h2>This is Art of Visual Data</h2>
+      <h2>This is Art of <span class="line-break"></span>Visual Data</h2>
     </header>
     <div class="sectionDivider"></div>  
     <p class="paragraphStyle2" id="finalIntroduction">Art of Visual Data (AoVD) is a platform and brand that translates complex global datasets into visual stories, improving data literacy for all through accessible design, storytelling, and gamification. The ultimate goal of AoVD is to advocate awareness of global issues through the power of design.</p>
