--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -360,7 +360,7 @@
     
 <div id="space2"></div>
 
-    <article class="ideation">
+    <article class="ideation" id="desktopIdea">
       <figure class="ideationFigure">
         <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
            <source src="https://dl.dropboxusercontent.com/scl/fi/rhpu7s4j8l12pb2iids26/graphideationInteractionC.mp4?rlkey=rrvxdp8kanndz35u8ugqw0wb8" type="video/mp4">
@@ -370,7 +370,21 @@
         <h3>Pairing interaction with data</h3>
         <p>The types of graphs I decided to use were simple, common, and easy-to-read graphs such as bar graphs, pictograms, pie graphs, etc...<br><br>For our detailed datasets, I utilized only the line graph/bubble chart to create a consistent base to pair with interactions such as hover effects. This creates a straightforward and consistent interaction system.</p>
       </div>
-    </article>      
+    </article>
+    
+<!-- This is the mobile version -->
+
+    <article class="ideation" id="mobileIdea">      
+      <div class="ideationText">
+        <h3>Pairing interaction with data</h3>
+        <p>The types of graphs I decided to use were simple, common, and easy-to-read graphs such as bar graphs, pictograms, pie graphs, etc...<br><br>For our detailed datasets, I utilized only the line graph/bubble chart to create a consistent base to pair with interactions such as hover effects. This creates a straightforward and consistent interaction system.</p>
+      </div>
+      <figure class="ideationFigure">
+        <video aria-label="Desktop Mockup of Art of Visual Data's homepage." class="mockupImage" autoplay muted loop playsinline>
+           <source src="https://dl.dropboxusercontent.com/scl/fi/rhpu7s4j8l12pb2iids26/graphideationInteractionC.mp4?rlkey=rrvxdp8kanndz35u8ugqw0wb8" type="video/mp4">
+        </video>
+      </figure>       
+    </article>
 
   </section>
 
