--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -35,7 +35,7 @@
 
   <section>
     <header class="prHeader">
-      <h1 class="prTitle">Art of Visual Data</h1>
+      <h1 class="prTitle">Art of <span style="white-space: nowrap;">Visual Data</span></h1>
       <div class="scrollIndicator">
         <div class="scrollIndicator-inner"></div>
       </div>    
@@ -518,9 +518,9 @@
       </article>        
     </section>
 
-    <!--continue desktop version-->
+    <!--desktop version-->
 
-    <figure class="customGrid">
+    <figure class="customGrid desktopFinals">
         <video class="gridItem" aria-label="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/sco14w2al1by24he9q939/interactionAmockup.mp4?rlkey=ncy4ilqlowqxbwmd40mko2bkf&st=37fntiug" type="video/mp4">
         </video>
@@ -530,7 +530,22 @@
         <video class="gridItem" aria-label="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop playsinline>
           <source src="https://dl.dropboxusercontent.com/scl/fi/4mmemsu4fie4oih98cgaj/interactionC.mp4?rlkey=b1i4uhi4j4r1ryhqfvilbeahq&st=l4i2jgb9" type="video/mp4">
         </video>
-    </figure>  
+    </figure>
+
+    <!--mobile version-->
+
+    <figure class="customGridMobile mobileFinals">
+      <div class="sectionDivider"></div>
+        <video class="gridItem" aria-label="Navigation bar opening and closing, transforming 3-line hamburger icon into 4-line bar graph when hovered. When clicked lines transform into an X." autoplay muted loop playsinline>
+          <source src="https://dl.dropboxusercontent.com/scl/fi/sco14w2al1by24he9q939/interactionAmockup.mp4?rlkey=ncy4ilqlowqxbwmd40mko2bkf&st=37fntiug" type="video/mp4">
+        </video>
+        <video class="gridItem" aria-label="Hover effects over sharing elements, slightly tilting icons." autoplay muted loop playsinline>
+          <source src="https://dl.dropboxusercontent.com/scl/fi/6d9532jta13z0yj57hgea/interactionB.mp4?rlkey=zhazv1uj3t3svr7ge6c37fvk2&st=ypuptjp0" type="video/mp4">
+        </video>
+        <video class="gridItem" aria-label="Hover effect over bubble chart's bubbles. Specific data is presented such as pie chart, percentage, name, and date." autoplay muted loop playsinline>
+          <source src="https://dl.dropboxusercontent.com/scl/fi/4mmemsu4fie4oih98cgaj/interactionC.mp4?rlkey=b1i4uhi4j4r1ryhqfvilbeahq&st=l4i2jgb9" type="video/mp4">
+        </video>
+    </figure>    
 
     <figure id="motionGraphic">
       <video aria-label="Motion graphic of Art of Visual Data's branding, purpose, and mockups." class="mockupImage" loop controls muted playsinline>
@@ -756,6 +771,19 @@ if (window.matchMedia("(max-width: 540px)").matches) {
 if (window.matchMedia("(min-width: 540px)").matches) {
   document.querySelectorAll('.mobileFinals, .mobileIdea').forEach(el => el.remove());
 }
+</script>
+
+
+<!-- Refresh page when breakpoint changes -->
+<script>
+let currentBreakpoint = window.innerWidth > 540 ? "desktop" : "mobile";
+
+window.addEventListener("resize", function() {
+  let newBreakpoint = window.innerWidth > 540 ? "desktop" : "mobile";
+  if (newBreakpoint !== currentBreakpoint) {
+    location.reload();
+  }
+});
 </script>
 
 </body>
