--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -554,7 +554,7 @@
     </figure>
 
     <figure class="figma">
-      <iframe class="figmaEmbed" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://embed.figma.com/proto/gpMu4qpljkMNpxxS8qJwIf/Project-2-%7C-DESN2021--V2-?page-id=1093%3A10673&node-id=1093-29772&p=f&viewport=1275%2C-196%2C0.02&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=1093%3A29772&embed-host=share" allowfullscreen></iframe>
+      <iframe title="Figma Prototype of Art of Visual Data Website" class="figmaEmbed" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://embed.figma.com/proto/gpMu4qpljkMNpxxS8qJwIf/Project-2-%7C-DESN2021--V2-?page-id=1093%3A10673&node-id=1093-29772&p=f&viewport=1275%2C-196%2C0.02&scaling=scale-down-width&content-scaling=fixed&starting-point-node-id=1093%3A29772&embed-host=share" allowfullscreen></iframe>
       <figcaption class="paragraphStyle1">Figma Prototype. <a href="https://youtu.be/F9b6qd57sjQ?si=JoQP31V_RhgZJeV1" class="reference1" target="_blank" rel="noopener">Full website walkthrough here.</a></figcaption>
     </figure>
 
