--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="artofvisualdata.css">
 </head>
 
-<body>  
+<body>
+<!-- DO NOT QUESTION ME ON MY CODE NAMING CONVENTIONS -->    
 <!-- This is our navigation bar. -->  
 <section class="fixedContainer">
   <div class="navContainer">
@@ -44,7 +45,7 @@
     <div class="imageContainer">
       <img src="caseStudy1/aovdWebsiteMockup.png" alt="Desktop Mockup showing Article Home Screen." class="mockupImage"></img>
     </div>
-  <section>
+  </section>
 
   <section class="prInfo">
 
@@ -686,11 +687,9 @@
           <li class="poroContainer"><img src="../media/poro_refined.gif" alt="8-Bit Poro from League of Legends." class="poro"></img></li>
         </ul>
       </article>
-    </section>
-  </section>  
-
-
+    </section>  
 </main>
+
 <!-- Footer/Scripts -->
  <footer class="footerContent">
   <div class="divider"></div>
