--- a/home.html
+++ b/home.html
@@ -41,10 +41,10 @@
 <main>
 
   <!-- This is our hero section. -->
-  <section class="mainpage">
-    <div class="mainTitle">
+  <section class="mainpage fadeinup">
+    <div class="mainTitle fadeinup">
       <h1>ENTER:<wbr>RICHARD</wbr></h1>
-      <img src="media/annoyingDog.gif" alt="8-Bit Dancing Dog." class="dog">
+      <img src="media/annoyingDog.gif" alt="8-Bit Dancing Dog." class="dog fadeinup">
     </div>
     <div class="subTitle"> 
       <div class="nowrap-container">  
@@ -82,7 +82,7 @@
   <section class="projects">
 
     <div class="projectList">
-      <article class="project1">
+      <article class="project1 fadeinup">
         <a href="https://richardlau.ca/project1/artofvisualdata"> <span class="visually-hidden">View project: Art of Visual Data Website</span>  
           <div class="thumbnailParent">
             <video aria-label="Art of Visual Data displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop playsinline>
@@ -98,7 +98,7 @@
         <div class="space"></div>
       </article>
 
-      <article class="project2">
+      <article class="project2 fadeinup">
         <a href="#"><span class="visually-hidden">View project: Art of Visual Data Typeface</span>  
           <div class="thumbnailParent">
             <img src="media/type_specimen_mockup_concrete.png" alt="Type Specimen booklet about the typeface called Art of Visual Data." class="Thumbnail2"></img>
@@ -112,7 +112,7 @@
         <div class="space"></div>
       </article>
 
-      <article class="project3">
+      <article class="project3 fadeinup">
         <a href="#"><span class="visually-hidden">View project: The Spiralist</span>  
           <div class="thumbnailParent">
             <img src="media/spiralist_cropped_mockup.gif" alt="Magazine spreads for 'The Spiralist,' featuring spirals created by a contrast of blue and gold blocks of text, connected across the spread." class="Thumbnail2"></img>
@@ -126,7 +126,7 @@
         <div class="space"></div>
       </article>
 
-      <article class="project4">
+      <article class="project4 fadeinup">
         <a href="#"><span class="visually-hidden">View project: The Queen's Gambit</span>  
           <div class="thumbnailParent">
             <video aria-label="Featuring gamified and graphical scenes recreating the essence of the show." class="Thumbnail2" autoplay muted loop playsinline>
@@ -288,6 +288,32 @@ setInterval(showNextPhrase, 2250);
     }
 lastScrollY = window.scrollY;
   });
+</script>
+
+<!-- Fade In Animation -->
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+  const sections = document.querySelectorAll('.fadeinup');
+
+  function checkFade() {
+    const viewportHeight = window.innerHeight;
+
+    sections.forEach(section => {
+      if (section.classList.contains('animateUp')) return; // skip already animated
+
+      const rect = section.getBoundingClientRect();
+
+      // Trigger when top of section reaches 65% of viewport
+      if (rect.top <= viewportHeight * 0.65 && rect.bottom >= 0) {
+        section.classList.add('animateUp');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', checkFade);
+  window.addEventListener('resize', checkFade);
+  checkFade(); // initial check
+});
 </script>
 </body>
 </html>
