--- a/home.html
+++ b/home.html
@@ -295,20 +295,20 @@ lastScrollY = window.scrollY;
 document.addEventListener('DOMContentLoaded', () => {
   const sections = document.querySelectorAll('.fadeinup');
 
-  function checkFade() {
-    const viewportHeight = window.innerHeight;
-    const viewportWidth = window.innerWidth;
+  // Stable viewport height for mobile/desktop
+  const viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
 
-    // Define breakpoints
-    const isMobile = viewportWidth < 768; // adjust if needed
-    const triggerPoint = isMobile ? 0.85 : 0.65; // 85% for mobile, 65% for desktop
+  function checkFade() {
+    const viewportWidth = window.innerWidth;
+    const isMobile = viewportWidth < 768;
+    const triggerPoint = isMobile ? 0.25 : 0.65; // 25% on mobile, 65% on desktop
 
     sections.forEach(section => {
-      if (section.classList.contains('animateUp')) return; // skip already animated
+      if (section.classList.contains('animateUp')) return;
 
       const rect = section.getBoundingClientRect();
 
-      // Trigger when top of section reaches the trigger point
+      // Trigger when top of section reaches trigger point
       if (rect.top <= viewportHeight * triggerPoint && rect.bottom >= 0) {
         section.classList.add('animateUp');
       }
