--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -762,29 +762,20 @@ document.addEventListener("DOMContentLoaded", function() {
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const sections = document.querySelectorAll('.fadeinup');
+  const viewportHeight = document.documentElement.clientHeight;
+  const triggerPoint = 0.65; // desktop trigger
 
   function checkFade() {
-    const viewportWidth = window.innerWidth;
-    const isMobile = viewportWidth < 768;
-    const triggerPoint = isMobile ? 0.85 : 0.65; // 35% mobile, 65% desktop
-
-    // Calculate viewport height dynamically each scroll
-    const viewportHeight = Math.max(document.documentElement.clientHeight, window.innerHeight || 0);
+    if (window.innerWidth < 540) return; // skip mobile
 
     sections.forEach(section => {
-      if (section.classList.contains('animateUp')) return;
-
-      const rect = section.getBoundingClientRect();
-
-      // Trigger with small offset to ensure early animation on mobile
-      if (rect.top <= viewportHeight * triggerPoint + (isMobile ? 80 : 0) && rect.bottom >= 0) {
+      if (!section.classList.contains('animateUp') && section.getBoundingClientRect().top <= viewportHeight * triggerPoint) {
         section.classList.add('animateUp');
       }
     });
   }
 
   window.addEventListener('scroll', checkFade);
-  window.addEventListener('resize', checkFade);
   checkFade(); // initial check
 });
 </script>
