--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -13,7 +13,15 @@
 </head>
 
 <body>
-<!-- DO NOT QUESTION ME ON MY CODE NAMING CONVENTIONS -->    
+<!-- DO NOT QUESTION ME ON MY CODE NAMING CONVENTIONS -->
+ 
+<div class="loadingContainer">
+  <video autoplay muted loop playsinline class="loadingVideo">
+    <source src="../media/loadingvid.webm" type="video/webm">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
 <!-- This is our navigation bar. -->  
 <section class="fixedContainer">
   <div class="navContainer">
@@ -807,5 +815,21 @@ window.addEventListener("resize", function() {
 });
 </script>
 
+
+<!-- Loading Screen -->
+<script>
+  window.addEventListener("load", function() {
+  setTimeout(() => {
+  console.log("This runs after 2 seconds");
+}, 2000);
+    const loader = document.querySelector(".loadingContainer"); // select by class
+    if(loader) {
+      loader.style.opacity = 0; // optional fade
+      setTimeout(() => loader.style.display = "none", 500);
+    }
+    const page = document.getElementById("pageContent");
+    if(page) page.style.display = "block";
+  },);
+</script>
 </body>
 </html>
