--- a/home.html
+++ b/home.html
@@ -20,6 +20,14 @@
 </head>
 
 <body>
+
+<div class="loadingContainer">
+  <video autoplay muted loop playsinline class="loadingVideo">
+    <source src="media/loadingvid.webm" type="video/webm">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
 <!-- This is our navigation bar. -->  
 <section class="fixedContainer">
   <div class="navContainer">
@@ -310,6 +318,22 @@ document.addEventListener('DOMContentLoaded', () => {
   window.addEventListener('scroll', checkFade);
   checkFade(); // initial check
 });
+</script>
+
+<!-- Loading Screen -->
+<script>
+  window.addEventListener("load", function() {
+  setTimeout(() => {
+  console.log("This runs after 2 seconds");
+}, 2000);    
+    const loader = document.querySelector(".loadingContainer"); // select by class
+    if(loader) {
+      loader.style.opacity = 0; // optional fade
+      setTimeout(() => loader.style.display = "none", 500);
+    }
+    const page = document.getElementById("pageContent");
+    if(page) page.style.display = "block";
+  },);
 </script>
 </body>
 </html>
