--- a/home.html
+++ b/home.html
@@ -323,7 +323,6 @@ document.addEventListener('DOMContentLoaded', () => {
 <!-- Loading Screen -->
 <script>
 window.addEventListener("load", function() {
-  // Wait 2 seconds before running your existing code
   setTimeout(() => {
     const loader = document.querySelector(".loadingContainer"); // select by class
     const page = document.getElementById("pageContent");
@@ -332,7 +331,11 @@ window.addEventListener("load", function() {
       loader.classList.add('playAnimation')
     }
 
-  }, 2000); // 2000ms = 2 seconds
+    setTimeout(() => {
+      loader.style.display = "none";
+    }, 500);
+
+  }, 1000);
 });
 </script>
 </body>
