--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -819,7 +819,6 @@ window.addEventListener("resize", function() {
 <!-- Loading Screen -->
 <script>
 window.addEventListener("load", function() {
-  // Wait 2 seconds before running your existing code
   setTimeout(() => {
     const loader = document.querySelector(".loadingContainer"); // select by class
     const page = document.getElementById("pageContent");
@@ -828,7 +827,11 @@ window.addEventListener("load", function() {
       loader.classList.add('playAnimation')
     }
 
-  }, 2000); // 2000ms = 2 seconds
+    setTimeout(() => {
+      loader.style.display = "none";
+    }, 500);
+
+  }, 1000);
 });
 </script>
 </body>
