--- a/project2/artofvisualdata-typeface.html
+++ b/project2/artofvisualdata-typeface.html
@@ -1,1 +1,3 @@
 <h1>fuck u lmao</h1>
+
+<img src="https://media.discordapp.net/attachments/758136141576142858/1383218855383404678/IMG_3389.jpg?ex=68a10cf2&is=689fbb72&hm=8ed06e77e725f01bfd716c536e60456102cc64bd8bb3f020dffcc0c8a43a69cb&=&format=webp&width=705&height=940"></img>
