--- a/project1/artofvisualdata.html
+++ b/project1/artofvisualdata.html
@@ -29,8 +29,8 @@
       <a href="https://richardlau.ca" class="logo" role="link" aria-label="Button to Homepage">richard</a>
       <nav class="nav-links">
         <ul>
+          <li><a href="#">home</a></li>
           <li><a href="#">about</a></li>
-          <li><a href="#">work</a></li>
           <li><a href="#">tidbits</a></li>
           <li><a href="#">resume</a></li>
         </ul>
