--- a/frosh/desn.html
+++ b/frosh/desn.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="../portfolioStyles/siteToolkit.css">
     <link rel="stylesheet" href="../projects.css">
     <link rel="stylesheet" href="desn.css">
+
+      <!-- Open Graph tags -->
+  <meta property="og:title" content="why are you sharing my website">
+  <meta property="og:description" content="there's nothing cool to see here.. just richard..">
+  <meta property="og:image" content="https://richardlau.ca/frosh/media/feature3.png">
+  <meta property="og:url" content="https://richardlau.ca/frosh/desn">
+  <meta property="og:type" content="website">
 </head>
 
 <body>
