--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
       <a href="https://richardlau.ca" class="logo" role="link" aria-label="Button to Homepage">richard</a>
       <nav class="nav-links">
         <ul>
-          <li><a href="#">home</a></li>
+          <li><a href="https://richardlau.ca/home">home</a></li>
           <li><a href="#">about</a></li>
           <li><a href="#">tidbits</a></li>
           <li><a href="#">resume</a></li>
@@ -91,7 +91,7 @@
 
     <div class="projectList">
       <article class="project1 fadeinup">
-        <a href="https://richardlau.ca/project1/artofvisualdata"> <span class="visually-hidden">View project: Art of Visual Data Website</span>  
+        <a href="https://richardlau.ca/artofvisualdata"> <span class="visually-hidden">View project: Art of Visual Data Website</span>  
           <div class="thumbnailParent">
             <video aria-label="Art of Visual Data displaying multiple website screens, highlighting data visualization." class="Thumbnail" autoplay muted loop playsinline>
               <source src="https://dl.dropboxusercontent.com/scl/fi/3xfbn9zcbm08zcmpq7zw5/aovdWebMotionVideo.mp4?rlkey=qh4srzpvmx9lint0lv9gofwyp&st=tbvlfxyw" type="video/mp4">
@@ -99,8 +99,8 @@
           </div>
         </a>
         <header class="projectHeaders">
-          <a href="https://richardlau.ca/project1/artofvisualdata" tabindex="-1">Art of Visual Data¹</a>
-          <a href="https://richardlau.ca/project1/artofvisualdata" class="more" tabindex="-1">see project<span class="visually-hidden">details for Art of Visual Data</span></a>
+          <a href="https://richardlau.ca/artofvisualdata" tabindex="-1">Art of Visual Data¹</a>
+          <a href="https://richardlau.ca/artofvisualdata" class="more" tabindex="-1">see project<span class="visually-hidden">details for Art of Visual Data</span></a>
         </header>
         <p class="description">Voicing global issues through interactive data visualization and animated storytelling</p>
         <div class="space"></div>
