--- a/home.html
+++ b/home.html
@@ -107,14 +107,14 @@
       </article>
 
       <article class="project2 fadeinup">
-        <a href="#"><span class="visually-hidden">View project: Art of Visual Data Typeface</span>  
+        <a href="https://richardlau.ca/artofvisualdata-typeface"><span class="visually-hidden">View project: Art of Visual Data Typeface</span>  
           <div class="thumbnailParent">
             <img src="media/type_specimen_mockup_concrete.png" alt="Type Specimen booklet about the typeface called Art of Visual Data." class="Thumbnail2"></img>
           </div>
         </a>
         <header class="projectHeaders">
-          <a href="#" tabindex="-1">AoVD Typeface²</a>
-          <a href="#" class="more" tabindex="-1">see project<span class="visually-hidden">details for AoVD Typeface</span></a>
+          <a href="https://richardlau.ca/artofvisualdata-typeface" tabindex="-1">AoVD Typeface²</a>
+          <a href="https://richardlau.ca/artofvisualdata-typeface" class="more" tabindex="-1">see project<span class="visually-hidden">details for AoVD Typeface</span></a>
         </header>
         <p class="description">A typeface system which visualizes statistics in letter frequencies within the English alphabet</p>
         <div class="space"></div>
@@ -135,7 +135,7 @@
       </article>
 
       <article class="project4 fadeinup">
-        <a href="#"><span class="visually-hidden">View project: The Queen's Gambit</span>  
+        <a href="https://richardlau.ca/queensgambit"><span class="visually-hidden">View project: The Queen's Gambit</span>  
           <div class="thumbnailParent">
             <video aria-label="Featuring gamified and graphical scenes recreating the essence of the show." class="Thumbnail2" autoplay muted loop playsinline>
               <source src="https://dl.dropboxusercontent.com/scl/fi/jfqz2oaxaph1u0idsuy2j/queenMockup.mp4?rlkey=dw375tplyzeia1mtt3bs322np&st=ib1o4t0l" type="video/mp4">
@@ -143,8 +143,8 @@
           </div> 
         </a>
         <header class="projectHeaders">
-          <a href="#" tabindex="-1">The Queen's Gambit</a>
-          <a href="#" class="more">see project<span class="visually-hidden">details for The Queen's Gambit</span></a>
+          <a href="https://richardlau.ca/queensgambit" tabindex="-1">The Queen's Gambit</a>
+          <a href="https://richardlau.ca/queensgambit" class="more">see project<span class="visually-hidden">details for The Queen's Gambit</span></a>
         </header>
         <p class="description">Reliving 'The Queen's Gambit' through a gamified and graphical experience</p>
         <div class="space"></div>
