--- a/secretsanta/index.html
+++ b/secretsanta/index.html
@@ -23,12 +23,11 @@
 
 
 <main>
-<div class="spacer"></div>
-    <div class="sections">
     <section class="hero">
         <header>
             <h1>Welcome to Richy's Wishlist :]</h1>
             <p>I've taken procrastination to the next level—not only am I not doing all my projects, but I've reinvested that time into something as pointless as a pretty wishlist.</p>
+            <p>P.S: I'm not too interested in MTG at the moment, though Riftbound is coming up!</p>        
         </header>
     </section>
 
@@ -37,17 +36,19 @@
     </section>
     
     <section class="wishlist">
-        <figure class="item">
+        <a class="item" href="https://shop-t1-na.gg/products/vandy-varsity-green" target="_blank" rel="noopener">
             <img src="https://shop-t1-na.gg/cdn/shop/files/Faker-x-VTP-Varsity-Front_600x.jpg?v=1718992483">
             <h2>T1 VARSITY JACKET</h2>
-        </figure>
+        </a>
 
-        <figure class="item">
+        <a class="item" href="https://shop-t1-na.gg/products/vandy-varsity-green" target="_blank" rel="noopener">
             <img src="https://cdn.rgpub.io/public/live/map/riftbound/latest/OGN/cards/OGN-079a/full-desktop.avif">
             <h2>RIFTBOUND CARD [CUSTOM PAINTED]</h2>
-        </figure>        
+        </a>  
+        
+        <a class="item" href="https://a.co/d/3zywr5b" target="_blank" rel="noopener">
+            <img src="https://m.media-amazon.com/images/I/81GDrps+mwL._SL1500_.jpg">
+            <h2>FEBREEZE AIR FRESHENER REFILLS</h2>
+        </a>
     </section>
-
-    </div>
-<div class="spacer"></div>    
 </main>    
